--- a/week16_all/week16_all.cbp
+++ b/week16_all/week16_all.cbp
@@ -42,6 +42,7 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Users/Administrator/Desktop/2023graphicsb/Final_Project/freeglut/lib" />
 		</Linker>
+		<Unit filename="glm.cpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
