--- a/Fianl_Project_real/Fianl_Project_real.cbp
+++ b/Fianl_Project_real/Fianl_Project_real.cbp
@@ -8,7 +8,6 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/Fianl_Project_real" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="C:/Users/user/Desktop/2023graphicsb/Final_Project/freeglut/bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -42,6 +41,7 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Users/user/Desktop/2023graphicsb/Final_Project/freeglut/lib" />
 		</Linker>
+		<Unit filename="glm.cpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
